force-app/main/default/objects/Lead_Contact__c/Lead_Contact__c.object-meta.xml
<CustomObject>
    <description>Stores additional Contacts related to a Lead</description>
    <label>Lead Contact</label>
    <nameField>
        <displayFormat>LC-{000000}</displayFormat>
        <label>Lead Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>