force-app/main/default/objects/Lead_Contact__c/fields/Related_Lead__c.field-meta.xml
<CustomField>
    <fullName>Related_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lead record that this Contact is related to.</inlineHelpText>
    <label>Related Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Lead Contacts</relationshipLabel>
    <relationshipName>Lead_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>