force-app/main/default/objects/Lead_Contact__c/fields/Type_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Contact__c</fullName>
    <inlineHelpText>Use to designate if this person is the primary contact and/or invoicing contact.</inlineHelpText>
    <label>Type of Contact</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Primary_Invoicing_Contact</valueSetName>
    </valueSet>
</CustomField>