force-app/main/default/objects/Lead_Contact__c/fields/Update_Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>Update_Lead_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hidden field used in Process Builder: Update Lead When Activity Logged</description>
    <label>Update Lead Status</label>
    <type>Checkbox</type>
</CustomField>